add emplloy markup

--- a/kode-intership-2025-react/markup/index.html
+++ b/kode-intership-2025-react/markup/index.html
@@ -15,8 +15,62 @@
             </div>
         </div>
     </header>
-
     <main>
+        <section  class="employee-list">
+            <ul class="employee-list__job-list">
+                <li class="employee-list__job-item employee-list__job-item--active">
+                    Все
+                </li>
+                <li class="employee-list__job-item">
+                    Designers
+                </li>
+                <li class="employee-list__job-item">
+                    Analysts
+                </li>
+                <li class="employee-list__job-item">
+                    Managers
+                </li>
+                <li class="employee-list__job-item">
+                    iOS
+                </li>
+                <li class="employee-list__job-item">
+                    Android
+                </li>
+            </ul>
+            <div class="employee-list__wrapper">
+                <ul class="employee-list__list">
+                    <li class="employee-list__card">
+                        <img class="employee-list__card-img" src="/kode-intership-2025-react/markup/img/cat.jpg" alt="avatar">
+                        <div class="employee-list__card-text-container">
+                            <h3 class="employee-list__card-name">
+                                Алексей Миногаров <span class="employee-list__card-name-job">mi</span>
+                            </h3>
+                            <span class="employee-list__card-job-title">
+                                Analyst
+                            </span>
+
+                        </div>
+
+                    </li>
+
+                    <li class="employee-list__card">
+                        <img class="employee-list__card-img" src="/kode-intership-2025-react/markup/img/cat.jpg" alt="avatar">
+                        <div class="employee-list__card-text-container">
+                            <h3 class="employee-list__card-name">
+                                Алексей Миногаров <span class="employee-list__card-name-job">mi</span>
+                            </h3>
+                            <span class="employee-list__card-job-title">
+                                Analyst
+                            </span>
+
+                        </div>
+
+                    </li>
+                </ul>
+            </div>
+            
+
+        </section>
     </main>
 
     <footer>
