Добавил в маркап ufo если проблема запроса

--- a/kode-intership-2025-react/markup/index.html
+++ b/kode-intership-2025-react/markup/index.html
@@ -15,7 +15,7 @@
             </div>
         </div>
     </header>
-    <div class="modal-container">
+    <!-- <div class="modal-container">
         <div class="modal-sort modal">
             <h1 class="modal-title">Сортировка</h1>
             <button class="modal-close-button">
@@ -43,7 +43,7 @@
               </ul>    
         </div>
 
-    </div>
+    </div> -->
 
 
     <main>
@@ -70,32 +70,11 @@
             </ul>
             <div class="employee-list__wrapper">
                 <ul class="employee-list__list">
-                    <li class="employee-list__card">
-                        <img class="employee-list__card-img" src="/kode-intership-2025-react/markup/img/cat.jpg" alt="avatar">
-                        <div class="employee-list__card-text-container">
-                            <h3 class="employee-list__card-name">
-                                Алексей Миногаров <span class="employee-list__card-name-job">mi</span>
-                            </h3>
-                            <span class="employee-list__card-job-title">
-                                Analyst
-                            </span>
-
-                        </div>
-
-                    </li>
-
-                    <li class="employee-list__card">
-                        <img class="employee-list__card-img" src="/kode-intership-2025-react/markup/img/cat.jpg" alt="avatar">
-                        <div class="employee-list__card-text-container">
-                            <h3 class="employee-list__card-name">
-                                Алексей Миногаров <span class="employee-list__card-name-job">mi</span>
-                            </h3>
-                            <span class="employee-list__card-job-title">
-                                Analyst
-                            </span>
-
-                        </div>
-
+                    <li class="employee-error">
+                        <img src="../markup/img/ufo.png" width="56" height="56">
+                        <span class="employee-error__title">Какой-то сверхразум все сломал</span>
+                        <span class="employee-error__promise">Постараемся быстро починить</span>
+                        <button class="employee-error__button">Попробовать снова</button>
                     </li>
                 </ul>
             </div>
