Добавил состояние для загрузки в маркап и типы в карточку

--- a/kode-intership-2025-react/markup/index.html
+++ b/kode-intership-2025-react/markup/index.html
@@ -70,11 +70,37 @@
             </ul>
             <div class="employee-list__wrapper">
                 <ul class="employee-list__list">
+                    <li class="employee-list__card">
+                        <img class="employee-list__card-img" src="/kode-intership-2025-react/markup/img/cat.jpg" alt="avatar">
+                        <div class="employee-list__card-text-container">
+                            <h3 class="employee-list__card-name">
+                                Алексей Миногаров <span class="employee-list__card-name-job">mi</span>
+                            </h3>
+                            <span class="employee-list__card-job-title">
+                                Analyst
+                            </span>
+
+                        </div>
+
+                    </li>
+
+                    <li class="employee-list__card">
+                        <div class="employee-list__card-img loading">
+                        </div>
+                        <div class="employee-list__card-text-container">
+
+                            <div class="employee-list__card-name loading loading-name">
+                            </div>
+
+                            <div class="employee-list__card-job-title loading loading-job">
+                            </div>
+
+                        </div>
+
+                    </li>
+
                     <li class="employee-error">
-                        <img src="../markup/img/ufo.png" width="56" height="56">
-                        <span class="employee-error__title">Какой-то сверхразум все сломал</span>
-                        <span class="employee-error__promise">Постараемся быстро починить</span>
-                        <button class="employee-error__button">Попробовать снова</button>
+
                     </li>
                 </ul>
             </div>
