--- a/kode-intership-2025-react/index.html
+++ b/kode-intership-2025-react/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Базовый HTML-шаблон</title>
+    <link rel="icon" href="./src/assets/">
+    <link rel="icon" type="image/png" href="./src/assets/favicon.png">
+    <title>Сотрудники</title>
 </head>
 <body id="root">
   <script type="module" src="/src/main.tsx"></script>
