--- a/kode-intership-2025-react/index.html
+++ b/kode-intership-2025-react/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./src/assets/">
-    <link rel="icon" type="image/png" href="./src/assets/favicon.png">
+    <link rel="icon" href="src/assets/favicon.ico">
+    <link rel="icon" type="image/png" href="src/assets/favicon.png">
     <title>Сотрудники</title>
 </head>
 <body id="root">
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="src/main.tsx"></script>
 </body>
 </html>
